--- a/styles/sass/components/_enter.sass
+++ b/styles/sass/components/_enter.sass
@@ -73,6 +73,8 @@ section.enter-container
                 @include button
                 text-align: left
                 width: 18rem
+                &.sign-out
+                    background: $fc-admin-delete
                 >span
                     align-self: center
                     margin-left: 4em
