--- a/styles/sass/components/_header.sass
+++ b/styles/sass/components/_header.sass
@@ -127,7 +127,7 @@ header
                         right: -5%
                         width: 18px
                         height: 18px
-                        background: $bgc-discounted
+                        background: $bgc-subsidiary-hilight
                         border-radius: 50%
                         @include flex
                         >svg
